hidden line from docs

--- a/doc/v0.md
+++ b/doc/v0.md
@@ -24,7 +24,7 @@ use fef::v0::expr::Expr;
 use fef::v0::expr::ExprTree;
 
 let mut reader = // ... getting the reader here
-    file.as_slice();
+    # file.as_slice();
 
 let expr: Expr<ExprTree> = read_expression_into_tree(&mut reader, &DEFAULT_CONFIG)?.into(); // Read the expression
 
