--- a/doc/v0.md
+++ b/doc/v0.md
@@ -16,7 +16,7 @@ Let's consider a situation where we should read one expression from a byte strea
 
 ```rust
 # fn main() -> Result<(), Box<dyn std::error::Error>> {
-# let file: Vec<u8> = vec![0x10, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01, 0x00];
+# let file: Vec<u8> = vec![0x10, 0x38, 0x02, 0x38, 0x01, 0x00];
 # use std::io::Read;
 use fef::v0::read::read_expression_into_tree;
 use fef::v0::config::DEFAULT_CONFIG;
@@ -24,7 +24,7 @@ use fef::v0::expr::Expr;
 use fef::v0::expr::ExprTree;
 
 let mut reader = // ... getting the reader here
-    file.as_slice();
+    # file.as_slice();
 
 let expr: Expr<ExprTree> = read_expression_into_tree(&mut reader, &DEFAULT_CONFIG)?.into(); // Read the expression
 
